<resources>
    <string name="app_name">TapCounter</string>

    <!--    Button names -->
    <!--    main Activity -->
    <string name="btn_increment">Increase</string>
    <string name="counter_value">0</string>
    <string name="btn_reset">RESET</string>
    <string name="settings">Settings</string>
    <string name="counter_name">Counter name</string>
    <string name="current_size_of_counter">Current size of counter</string>
    <string name="etv_textSize">16sp</string>
    <string name="theme">Theme</string>
    <string name="counters">Counters</string>
    <string name="done">Done</string>
    <string name="add_new_counter">Add New Counter</string>

    <string-array name="themeOptionsArray">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>

</resources>
