<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/editTitle"
        android:icon="@drawable/edit_title"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_showCounters"
        android:icon="@drawable/vec_list_counters"
        android:title="@string/counters"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_addNewCounter"
        android:icon="@drawable/edit_title"
        android:title="@string/add_new_counter"
        app:showAsAction="never" />
</menu>
