<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_title_backgroung"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingTop="16dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/tv_settings_Counter_textSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/current_size_of_counter"
            android:textColor="?attr/editTextColor"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etv_settings_Counter_textSize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/etv_textSize"
            android:inputType="number"
            android:maxWidth="40sp"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:textColor="?attr/editTextColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/tv_settings_theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/theme"
            android:textColor="?attr/editTextColor"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_settings_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>
